qt/gen_qgraphicseffect.h

typedef struct QChildEvent QChildEvent;
typedef struct QColor QColor;
typedef struct QEvent QEvent;
typedef struct QGraphicsBlurEffect QGraphicsBlurEffect;
typedef struct QGraphicsColorizeEffect QGraphicsColorizeEffect;
typedef struct QGraphicsDropShadowEffect QGraphicsDropShadowEffect;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPainter QPainter;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QTimerEvent QTimerEvent;
bool QGraphicsColorizeEffect_override_virtual_disconnectNotify(void* self, intptr_t slot);
const QMetaObject* QGraphicsColorizeEffect_staticMetaObject();
void QGraphicsColorizeEffect_delete(QGraphicsColorizeEffect* self);
QGraphicsBlurEffect* QGraphicsBlurEffect_new();
QGraphicsBlurEffect* QGraphicsBlurEffect_new2(QObject* parent);
QMetaObject* QGraphicsBlurEffect_metaObject(const QGraphicsBlurEffect* self);
void* QGraphicsBlurEffect_metacast(QGraphicsBlurEffect* self, const char* param1);
int QGraphicsBlurEffect_metacall(QGraphicsBlurEffect* self, int param1, int param2, void** param3);
struct miqt_string QGraphicsBlurEffect_tr(const char* s);
struct miqt_string QGraphicsBlurEffect_trUtf8(const char* s);
QRectF* QGraphicsBlurEffect_boundingRectFor(const QGraphicsBlurEffect* self, QRectF* rect);
double QGraphicsBlurEffect_blurRadius(const QGraphicsBlurEffect* self);
int QGraphicsBlurEffect_blurHints(const QGraphicsBlurEffect* self);
void QGraphicsBlurEffect_setBlurRadius(QGraphicsBlurEffect* self, double blurRadius);
void QGraphicsBlurEffect_setBlurHints(QGraphicsBlurEffect* self, int hints);
void QGraphicsBlurEffect_blurRadiusChanged(QGraphicsBlurEffect* self, double blurRadius);
void QGraphicsBlurEffect_connect_blurRadiusChanged(QGraphicsBlurEffect* self, intptr_t slot);
void QGraphicsBlurEffect_blurHintsChanged(QGraphicsBlurEffect* self, int hints);
void QGraphicsBlurEffect_connect_blurHintsChanged(QGraphicsBlurEffect* self, intptr_t slot);
struct miqt_string QGraphicsBlurEffect_tr2(const char* s, const char* c);
struct miqt_string QGraphicsBlurEffect_tr3(const char* s, const char* c, int n);
struct miqt_string QGraphicsBlurEffect_trUtf82(const char* s, const char* c);
struct miqt_string QGraphicsBlurEffect_trUtf83(const char* s, const char* c, int n);
bool QGraphicsBlurEffect_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QGraphicsBlurEffect_virtualbase_metaObject(const void* self);
bool QGraphicsBlurEffect_override_virtual_metacast(void* self, intptr_t slot);
void* QGraphicsBlurEffect_virtualbase_metacast(void* self, const char* param1);
bool QGraphicsBlurEffect_override_virtual_metacall(void* self, intptr_t slot);
int QGraphicsBlurEffect_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QGraphicsBlurEffect_override_virtual_boundingRectFor(void* self, intptr_t slot);
QRectF* QGraphicsBlurEffect_virtualbase_boundingRectFor(const void* self, QRectF* rect);
bool QGraphicsBlurEffect_override_virtual_draw(void* self, intptr_t slot);
void QGraphicsBlurEffect_virtualbase_draw(void* self, QPainter* painter);
bool QGraphicsBlurEffect_override_virtual_sourceChanged(void* self, intptr_t slot);
void QGraphicsBlurEffect_virtualbase_sourceChanged(void* self, int flags);
bool QGraphicsBlurEffect_override_virtual_event(void* self, intptr_t slot);
bool QGraphicsBlurEffect_virtualbase_event(void* self, QEvent* event);
bool QGraphicsBlurEffect_override_virtual_eventFilter(void* self, intptr_t slot);
bool QGraphicsBlurEffect_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QGraphicsBlurEffect_override_virtual_timerEvent(void* self, intptr_t slot);
void QGraphicsBlurEffect_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QGraphicsBlurEffect_override_virtual_childEvent(void* self, intptr_t slot);
void QGraphicsBlurEffect_virtualbase_childEvent(void* self, QChildEvent* event);
bool QGraphicsBlurEffect_override_virtual_customEvent(void* self, intptr_t slot);
void QGraphicsBlurEffect_virtualbase_customEvent(void* self, QEvent* event);
bool QGraphicsBlurEffect_override_virtual_connectNotify(void* self, intptr_t slot);
void QGraphicsBlurEffect_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QGraphicsBlurEffect_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QGraphicsBlurEffect_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QGraphicsBlurEffect_staticMetaObject();
void QGraphicsBlurEffect_delete(QGraphicsBlurEffect* self);
QGraphicsDropShadowEffect* QGraphicsDropShadowEffect_new();
QGraphicsDropShadowEffect* QGraphicsDropShadowEffect_new2(QObject* parent);
QMetaObject* QGraphicsDropShadowEffect_metaObject(const QGraphicsDropShadowEffect* self);
void* QGraphicsDropShadowEffect_metacast(QGraphicsDropShadowEffect* self, const char* param1);
int QGraphicsDropShadowEffect_metacall(QGraphicsDropShadowEffect* self, int param1, int param2, void** param3);
struct miqt_string QGraphicsDropShadowEffect_tr(const char* s);
struct miqt_string QGraphicsDropShadowEffect_trUtf8(const char* s);
QRectF* QGraphicsDropShadowEffect_boundingRectFor(const QGraphicsDropShadowEffect* self, QRectF* rect);
QPointF* QGraphicsDropShadowEffect_offset(const QGraphicsDropShadowEffect* self);
double QGraphicsDropShadowEffect_xOffset(const QGraphicsDropShadowEffect* self);
double QGraphicsDropShadowEffect_yOffset(const QGraphicsDropShadowEffect* self);
double QGraphicsDropShadowEffect_blurRadius(const QGraphicsDropShadowEffect* self);
QColor* QGraphicsDropShadowEffect_color(const QGraphicsDropShadowEffect* self);
void QGraphicsDropShadowEffect_setOffset(QGraphicsDropShadowEffect* self, QPointF* ofs);
void QGraphicsDropShadowEffect_setOffset2(QGraphicsDropShadowEffect* self, double dx, double dy);
void QGraphicsDropShadowEffect_setOffsetWithQreal(QGraphicsDropShadowEffect* self, double d);
void QGraphicsDropShadowEffect_setXOffset(QGraphicsDropShadowEffect* self, double dx);
void QGraphicsDropShadowEffect_setYOffset(QGraphicsDropShadowEffect* self, double dy);
void QGraphicsDropShadowEffect_setBlurRadius(QGraphicsDropShadowEffect* self, double blurRadius);
void QGraphicsDropShadowEffect_setColor(QGraphicsDropShadowEffect* self, QColor* color);
void QGraphicsDropShadowEffect_offsetChanged(QGraphicsDropShadowEffect* self, QPointF* offset);
void QGraphicsDropShadowEffect_connect_offsetChanged(QGraphicsDropShadowEffect* self, intptr_t slot);
void QGraphicsDropShadowEffect_blurRadiusChanged(QGraphicsDropShadowEffect* self, double blurRadius);
void QGraphicsDropShadowEffect_connect_blurRadiusChanged(QGraphicsDropShadowEffect* self, intptr_t slot);
void QGraphicsDropShadowEffect_colorChanged(QGraphicsDropShadowEffect* self, QColor* color);
void QGraphicsDropShadowEffect_connect_colorChanged(QGraphicsDropShadowEffect* self, intptr_t slot);
struct miqt_string QGraphicsDropShadowEffect_tr2(const char* s, const char* c);
struct miqt_string QGraphicsDropShadowEffect_tr3(const char* s, const char* c, int n);
struct miqt_string QGraphicsDropShadowEffect_trUtf82(const char* s, const char* c);
struct miqt_string QGraphicsDropShadowEffect_trUtf83(const char* s, const char* c, int n);
bool QGraphicsDropShadowEffect_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QGraphicsDropShadowEffect_virtualbase_metaObject(const void* self);
bool QGraphicsDropShadowEffect_override_virtual_metacast(void* self, intptr_t slot);
void* QGraphicsDropShadowEffect_virtualbase_metacast(void* self, const char* param1);
bool QGraphicsDropShadowEffect_override_virtual_metacall(void* self, intptr_t slot);
int QGraphicsDropShadowEffect_virtualbase_metacall(void* self, int param1, int param2, void** param3);
QRectF* QGraphicsDropShadowEffect_virtualbase_boundingRectFor(const void* self, QRectF* rect);